; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_file.c_mac_file_check_mmap_downgrade.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_file.c_mac_file_check_mmap_downgrade.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { i32 }
%struct.fileglob = type { i32 }

@file_check_mmap_downgrade = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_file_check_mmap_downgrade(%struct.ucred* %0, %struct.fileglob* %1, i32* %2) #0 {
  %4 = alloca %struct.ucred*, align 8
  %5 = alloca %struct.fileglob*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.ucred* %0, %struct.ucred** %4, align 8
  store %struct.fileglob* %1, %struct.fileglob** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* @file_check_mmap_downgrade, align 4
  %11 = load %struct.ucred*, %struct.ucred** %4, align 8
  %12 = load %struct.fileglob*, %struct.fileglob** %5, align 8
  %13 = load %struct.fileglob*, %struct.fileglob** %5, align 8
  %14 = getelementptr inbounds %struct.fileglob, %struct.fileglob* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @MAC_PERFORM(i32 %10, %struct.ucred* %11, %struct.fileglob* %12, i32 %15, i32* %7)
  %17 = load i32, i32* %7, align 4
  %18 = load i32*, i32** %6, align 8
  store i32 %17, i32* %18, align 4
  ret void
}

declare dso_local i32 @MAC_PERFORM(i32, %struct.ucred*, %struct.fileglob*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
